--- a/estilos.css
+++ b/estilos.css
@@ -1,10 +1,12 @@
+@import url(https://fonts.googleapis.com/css?family=Lato:300,100);
 body{
     margin: 0;
-    background-image: url("imagenes/rojo.png");
+    background-image: url("imagenes/rojo.jpg");
     background-position: center;
-    background-repeat: repeat;
+    background-repeat:  no-repeat;
     background-color: #5a0000;
     text-align: center;
+    font-size: 14pt;
 }
 nav {
     display: block;
@@ -30,7 +32,7 @@ h2{
     background-color: black;
     padding-top: 10px;
     padding-bottom: 10px;
-    margin-top: 150px;
+    margin-top: 100px;
     margin-right: 500px;
     margin-left: 500px;
     border-radius: 15px 15px 15px 15px;
@@ -44,7 +46,7 @@ h2{
     padding-top: 10px;
     padding-left: 5px;
     padding-right: 5px;
-    margin-top: 100px;
+    margin-top: 50px;
     margin-right: 250px;
     margin-left: 250px;
     border-radius: 15px 15px 15px 15px;
@@ -58,7 +60,7 @@ h2{
     padding-top: 10px;
     padding-left: 5px;
     padding-right: 5px;
-    margin-top: 100px;
+    margin-top: 50px;
     margin-left: 250px;
     margin-right: 250px;
     border-radius: 15px 15px 15px 15px;
@@ -72,18 +74,46 @@ h2{
     padding-top: 10px;
     padding-left: 5px;
     padding-right: 5px;
-    margin-top: 100px;
+    margin-top: 50px;
     margin-left: 250px;
     margin-right: 250px;
     border-radius: 15px 15px 15px 15px;
+}
+#contacto{
+    margin: 0;
+    text-align: center;
+    color: gray;
+    background-color: black;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-right: 5px;
+    padding-left: 5px;
+    margin-top: 50px;
+    margin-right: 600px;
+    margin-left: 600px;
+    border-radius: 15px 15px 15px 15px;
+}
+img{
+    text-align:center;
+    border-radius: 5px 5px 5px 5px;
+}
+strong{
+    color: white;
 }
 a{
     color: white;
     font-size: 35px;
     text-decoration:none
 }
-a:hover{
+a:hover {
     color: black;
     background-color: white;
     border-radius: 5px 5px 5px 5px;
+}
+th{
+    color: white;
+    font-size: 20px;
+}
+td{
+    font-size: 20px;
 }
