--- a/estilos.css
+++ b/estilos.css
@@ -1,9 +1,8 @@
-@import url(https://fonts.googleapis.com/css?family=Lato:300,100);
 body{
     margin: 0;
     background-image: url("imagenes/rojo.jpg");
-    background-position: center;
-    background-repeat:  no-repeat;
+    background-position: inherit;
+    background-repeat: repeat;
     background-color: #5a0000;
     text-align: center;
     font-size: 14pt;
@@ -24,21 +23,36 @@ h1{
 h2{
     color: gray;
     font-size: 30px;
+
 }
 #capa {
     margin: 0;
     text-align: center;
     color: gray;
     background-color: black;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    margin-top: 100px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    margin-top: 50px;
     margin-right: 500px;
     margin-left: 500px;
     border-radius: 15px 15px 15px 15px;
+
 }
 #estudios{
-    margin:0;
+
+    text-align: justify;
+    background-color: black;
+    color: gray;
+    padding-bottom: 10px;
+    padding-top: 10px;
+    padding-left: 5px;
+    padding-right: 5px;
+    margin-top: 50px;
+    margin-right: 250px;
+    margin-left: 250px;
+    border-radius: 15px 15px 15px 15px;
+}
+#exp{
     text-align: justify;
     background-color: black;
     color: gray;
@@ -52,7 +66,6 @@ h2{
     border-radius: 15px 15px 15px 15px;
 }
 #conocimientos{
-    margin: 0;
     text-align: justify;
     background-color: black;
     color: gray;
@@ -66,7 +79,6 @@ h2{
     border-radius: 15px 15px 15px 15px;
 }
 #datos{
-    margin: 0;
     text-align: justify;
     background-color: black;
     color: gray;
@@ -80,7 +92,6 @@ h2{
     border-radius: 15px 15px 15px 15px;
 }
 #contacto{
-    margin: 0;
     text-align: center;
     color: gray;
     background-color: black;
@@ -92,6 +103,11 @@ h2{
     margin-right: 600px;
     margin-left: 600px;
     border-radius: 15px 15px 15px 15px;
+}
+table{
+    border-color: darkred;
+    border-radius: 5px 5px 5px 5px;
+    border-width: 2px;
 }
 img{
     text-align:center;
@@ -113,7 +129,10 @@ a:hover {
 th{
     color: white;
     font-size: 20px;
+    padding: 10px;
 }
 td{
-    font-size: 20px;
+    margin-left: 100px;
+    font-size: 19px;
+    padding: 10px;
 }
