--- a/estilos.css
+++ b/estilos.css
@@ -26,7 +26,6 @@ h2{
 
 }
 #capa {
-    margin: 0;
     text-align: center;
     color: gray;
     background-color: black;
@@ -36,10 +35,8 @@ h2{
     margin-right: 500px;
     margin-left: 500px;
     border-radius: 15px 15px 15px 15px;
-
 }
 #estudios{
-
     text-align: justify;
     background-color: black;
     color: gray;
@@ -104,10 +101,24 @@ h2{
     margin-left: 600px;
     border-radius: 15px 15px 15px 15px;
 }
+#form{
+    text-align: justify;
+    background-color: black;
+    color: gray;
+    padding-bottom: 10px;
+    padding-top: 10px;
+    padding-left: 5px;
+    padding-right: 5px;
+    margin-top: 50px;
+    margin-left: 250px;
+    margin-right: 250px;
+    border-radius: 15px 15px 15px 15px;
+}
 table{
     border-color: darkred;
     border-radius: 5px 5px 5px 5px;
     border-width: 2px;
+    text-align: justify;
 }
 img{
     text-align:center;
@@ -135,4 +146,27 @@ td{
     margin-left: 100px;
     font-size: 19px;
     padding: 10px;
+}
+.activo{
+    background-color: darkred;
+    padding: 5px;
+    border-radius: 5px 5px 5px 5px;
+}
+.foto{
+    padding-left: 300px;
+    padding-bottom: 100px;
+}
+.texto{
+    padding-left: 100px;
+}
+.boton{
+    padding-left:  15px;
+    padding-right: 15px;
+    padding-bottom: 5px;
+    padding-top: 5px;
+    border-color: darkred;
+    
+    background-color: gray;
+    color: black;
+    border-radius: 15px 15px 15px 15px;
 }
